objects/GL_Entry_Fix__c/GL_Entry_Fix__c.object-meta.xml
<CustomObject>
    <label>GL Entry Fix</label>
    <nameField>
        <displayFormat>GLFIX-{0000000}</displayFormat>
        <label>Entry No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>GL Entry Fix</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>