objects/GL_Entry_Fix__c/fields/Abs_Amount__c.field-meta.xml
<CustomField>
    <fullName>Abs_Amount__c</fullName>
    <formula>ABS( Amount__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Abs Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>