objects/GL_Entry_Fix__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>GL Entry Fix</relationshipLabel>
    <relationshipName>GL_Entry_Fix</relationshipName>
    <type>Lookup</type>
</CustomField>