objects/GL_Entry_Fix__c/fields/Account_No__c.field-meta.xml
<CustomField>
    <fullName>Account_No__c</fullName>
    <formula>CASE(Formatted_Account_Type__c, 'G_L_Account', GL_Account__r.Name, 'Customer', Account__r.AccountNumber, 'Vendor', Account__r.AccountNumber, '')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account No.</label>
    <type>Text</type>
</CustomField>