objects/GL_Entry_Fix__c/fields/Formatted_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Formatted_Account_Type__c</fullName>
    <formula>CASE(TEXT(Account_Type__c), 'GL Account', 'G_L_Account', TEXT(Account_Type__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formatted Account Type</label>
    <type>Text</type>
</CustomField>