objects/GL_Entry_Fix__c/fields/GL_Account__c.field-meta.xml
<CustomField>
    <fullName>GL_Account__c</fullName>
    <label>GL Account</label>
    <referenceTo>GL_Account__c</referenceTo>
    <relationshipLabel>GL Entry Fix</relationshipLabel>
    <relationshipName>GL_Entry_Fix</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>