objects/GL_Entry_Fix__c/fields/GL_Account_Description__c.field-meta.xml
<CustomField>
    <fullName>GL_Account_Description__c</fullName>
    <formula>GL_Account__r.Description__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GL Account Description</label>
    <type>Text</type>
</CustomField>