objects/GL_Entry_Fix__c/fields/NAV_Service_Center_Code__c.field-meta.xml
<CustomField>
    <fullName>NAV_Service_Center_Code__c</fullName>
    <formula>CASE(Subsidiary_Company__r.Name, 
'1-ACV ENVIRO', Service_Center__r.NAV_ACV_Service_Center_Code__c, 
'2-CYCLE CHEM., INC.', Service_Center__r.NAV_CCI_Service_Center_Code__c, 
Service_Center__r.NAV_Service_Center_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NAV Service Center Code</label>
    <type>Text</type>
</CustomField>