objects/GL_Entry_Fix__c/fields/Payment_Term__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Payment Term</label>
    <referenceTo>Payment_Term__c</referenceTo>
    <relationshipLabel>GL Entry Fix</relationshipLabel>
    <relationshipName>GL_Entry_Fix</relationshipName>
    <type>Lookup</type>
</CustomField>