objects/GL_Entry_Fix__c/fields/Service_Center__c.field-meta.xml
<CustomField>
    <fullName>Service_Center__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Center</label>
    <referenceTo>Service_Center__c</referenceTo>
    <relationshipLabel>GL Entry Fix</relationshipLabel>
    <relationshipName>GL_Entry_Fix</relationshipName>
    <type>Lookup</type>
</CustomField>