objects/GL_Entry_Fix__c/fields/Subsidiary_Company__c.field-meta.xml
<CustomField>
    <fullName>Subsidiary_Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Subsidiary Company</label>
    <referenceTo>Subsidiary_Company__c</referenceTo>
    <relationshipLabel>GL Entry Fix</relationshipLabel>
    <relationshipName>GL_Entry_Fix</relationshipName>
    <type>Lookup</type>
</CustomField>