objects/GL_Entry_Fix__c/fields/Tax_Area__c.field-meta.xml
<CustomField>
    <fullName>Tax_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Area</label>
    <referenceTo>Tax_Area__c</referenceTo>
    <relationshipLabel>GL Entry Fix</relationshipLabel>
    <relationshipName>GL_Entry_Fix</relationshipName>
    <type>Lookup</type>
</CustomField>