objects/GL_Entry_Fix__c/fields/Tax_Jurisdiction__c.field-meta.xml
<CustomField>
    <fullName>Tax_Jurisdiction__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Tax Jurisdiction</label>
    <referenceTo>Tax_Jurisdiction__c</referenceTo>
    <relationshipLabel>GL Entry Fix</relationshipLabel>
    <relationshipName>GL_Entry_Fix</relationshipName>
    <type>Lookup</type>
</CustomField>