objects/GL_Entry_Fix__c/fields/Tax_Line__c.field-meta.xml
<CustomField>
    <fullName>Tax_Line__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Tax Line</label>
    <type>Checkbox</type>
</CustomField>