objects/GL_Entry_Fix__c/fields/Transaction_Source__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Source__c</fullName>
    <label>Transaction Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sales Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>