objects/GL_Entry_Fix__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Sales_Invoice__c</columns>
    <columns>Posting_Date__c</columns>
    <columns>Service_Center__c</columns>
    <columns>Description__c</columns>
    <columns>Amount__c</columns>
    <columns>Account__c</columns>
    <columns>Document_Type__c</columns>
    <columns>Document_No__c</columns>
    <columns>GL_Account__c</columns>
    <columns>Account_No__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>